Bug 127416 - [FORMATTING] Can't use Icon set in Conditional Formatting
Summary: [FORMATTING] Can't use Icon set in Conditional Formatting
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.3.1.2 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0 target:6.3.3
Keywords: bibisected, bisected, regression
: 128259 (view as bug list)
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2019-09-07 09:07 UTC by mattia.b89
Modified: 2019-10-22 09:53 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot of mis drawn icons (39.23 KB, image/png)
2019-09-07 09:08 UTC, mattia.b89
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mattia.b89 2019-09-07 09:07:43 UTC
Description:
In Calc, I can't use Conditional Icon Set

I discovered the issue while re-testing for this bug: https://bugs.documentfoundation.org/show_bug.cgi?id=115334

Steps to Reproduce:
1. open a new spreadsheet with Calc
2. select a cell
3. Format -> Conditional -> Icon set
4. fill any of the condition box (the one beside the arrows)
5. change icon set (the right-er drop down menu, with "3 arrows"...)
6. try to edit the condition box

Actual Results:
A) when change icon-set (arrows, flaps, etc.),  icons graphically get overdrawn, see the screenshot attached.
B) LO gets slow/unresponsive, such as CPU get 100%

Expected Results:
it works


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Version: 6.3.1.2
Build ID: 6.3.1-1
CPU threads: 4; OS: Linux 5.2; UI render: default; VCL: gtk3; 
Locale: it-IT (en_GB.UTF-8); UI-Language: en-GB
Calc: threaded
Comment 1 mattia.b89 2019-09-07 09:08:15 UTC
Created attachment 153999 [details]
screenshot of mis drawn icons
Comment 2 Xisco Faulí 2019-09-23 14:05:33 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=492b0d5d076d38234fea4e4e7c5dbec578296fd2

author	Caolán McNamara <caolanm@redhat.com>	2019-05-07 12:27:43 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2019-05-11 18:34:23 +0200
commit 492b0d5d076d38234fea4e4e7c5dbec578296fd2 (patch)
tree 47b4a17120d7d3c71bf7674b45768f38b761e360
parent acd290431fd39ed0602e057e036326b46a99f7a8 (diff)
weld conditional formatting

Bisected with: bibisect-linux64-6.3

Adding Cc: to Caolán McNamara
Comment 3 Commit Notification 2019-09-26 18:53:14 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/eb2b96f9c686401066f420d0f21937fc14eee1f7

Resolves: tdf#127416 unparent iconset block on dtor

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2019-09-26 18:56:14 UTC
fixed in master, backport to 6-3 in gerrit
Comment 5 Xisco Faulí 2019-10-01 11:46:19 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: 981654f6e0d57c2c6dd1bbf740a6b67941146497
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: en-US (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!
Comment 6 Commit Notification 2019-10-01 11:53:39 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/ee06f8497be65681df54b78157013e12afadfd27

Resolves: tdf#127416 unparent iconset block on dtor

It will be available in 6.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2019-10-22 09:53:11 UTC
*** Bug 128259 has been marked as a duplicate of this bug. ***