Resolves: tdf#127416 unparent iconset block on dtor

otherwise gtk keeps the widgets around

Change-Id: I6227662e0a8a4d5a88f4ff6199d6fa06e5be8fe0